--- a/vercel.json
+++ b/vercel.json
@@ -16,6 +16,13 @@
         "APP_URL": "https://your.url.from.vercel.app",
         "APP_KEY": "base64:dwBCYPuXvsyZwDM5ZQTS72UnY7P5ClkQhIGfr2wT1BQ=",
 
+        "DB_CONNECTION": "pgsql",
+        "DB_HOST": "aws-0-eu-central-1.pooler.supabase.com",
+        "DB_PORT": "6543",
+        "DB_DATABASE": "postgres",
+        "DB_USERNAME": "postgres.eiyvvyesppbsymchiphs",
+        "DB_PASSWORD": "taroieuvCyrN9RT1",
+
         "APP_CONFIG_CACHE": "/tmp/config.php",
         "APP_EVENTS_CACHE": "/tmp/events.php",
         "APP_PACKAGES_CACHE": "/tmp/packages.php",
