--- a/.gitignore
+++ b/.gitignore
@@ -24,6 +24,8 @@ yarn-error.log
 /public/user_photos/*
 /public/vendor_photos/*
 
+/storage/elevate-pesa-firebase-adminsdk-tdy9j-6c7809cdeb.json
+
 
 /public/car_brand_logos/*
 /public/car_photos/*
