improved public and database

--- a/.gitignore
+++ b/.gitignore
@@ -17,12 +17,11 @@ yarn-error.log
 /.fleet
 /.idea
 /.vscode
-/public/product_brand_logos/*
+/public/category_photos/*
+/public/package_photos/*
 /public/product_photos/*
-/public/product_type_photos/*
-/public/product_videos/*
 /public/user_photos/*
-/public/vendor_photos/*
+
 
 /storage/elevate-pesa-firebase-auth.json
 
